<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">记忆卡游戏</string>
    <string name="title_activity_main">记忆卡游戏</string>

    <!-- 主界面 -->
    <string name="begin">开始游戏</string>
    <string name="selectlevel">选择关卡</string>
    <string name="sourceres">分数记录</string>
    <string name="aboutgame">关于游戏</string>
    <string name="title_activity_flash">FlashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gameconfig">游戏配置</string>
    <string name="restart">重新开始</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_dialog_message">DialogMessageActivity</string>

</resources>