<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:baiduadsdk="http://schemas.android.com/apk/res/com.liubao.card.cardgame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue" >

    <LinearLayout
        android:id="@+id/menulay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/startButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/begin"
            android:textSize="20sp" />

        <Button
            android:id="@+id/levelButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/selectlevel"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sourceButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/sourceres"
            android:textSize="20sp" />

        <Button
            android:id="@+id/gameconfigButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/gameconfig"
            android:textSize="20sp" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/aboutgame"
            android:textSize="20sp" />
    </LinearLayout>

    
    <!-- 百度广告 -->
	<com.baidu.mobads.AdView android:id="@+id/adView"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"  
		baiduadsdk:adSize="0"
		baiduadsdk:adId = "" 

	  />


</RelativeLayout>